# NG_COOL_BED

./: .editorconfig  .gitignore  AGENTS.md  README.md  requirements.txt
UI/NG_COOL_BED_UI/: CMakeLists.txt  Main.qml  main.cpp  main.py  qml.qrc
UI/NG_COOL_BED_UI/.qtcreator/: CMakeLists.txt.user.06e2dfb
UI/NG_COOL_BED_UI/qml/: MainLayout.qml
UI/NG_COOL_BED_UI/qml/api/: Api.qml  Config.qml  Tool.qml
UI/NG_COOL_BED_UI/qml/base/: HeadBase.qml
UI/NG_COOL_BED_UI/qml/core/: Core.qml
UI/NG_COOL_BED_UI/qml/dialogs/: SendDialog.qml  SettingCore.qml  TextViewItem.qml
UI/NG_COOL_BED_UI/qml/head/: HeadView.qml  MainTabView.qml  SettingButton.qml  TestBtns.qml
UI/NG_COOL_BED_UI/qml/menus/: ToolMenus.qml
UI/NG_COOL_BED_UI/qml/types/: CoolBedDataType.qml  CoolBedDataTypeItem.qml
UI/NG_COOL_BED_UI/qml/view/: CoolBedView.qml
UI/NG_COOL_BED_UI/qml/view/core/: CoolBedCore.qml  MapConfig.qml  MapConfigItem.qml  ObjectType.qml  TimeCore.qml
UI/NG_COOL_BED_UI/qml/view/data/: DataLabelEx.qml  DataLabelItem.qml  DataView.qml  SteelInfoList.qml
UI/NG_COOL_BED_UI/qml/view/head/: AutoCheckDelegate.qml  GroupButton.qml  GroupButtonListView.qml  Head.qml
UI/NG_COOL_BED_UI/qml/view/view/: CoolBedMoveItem.qml  ImageView.qml  MapView.qml  ObjView.qml  ObjectItem.qml
app/UI/NG_COOL_BED_UI/: CMakeLists.txt  Main.qml  main.cpp  main.py  qml.qrc  resource.qrc
app/UI/NG_COOL_BED_UI/qml/: MainLayout.qml
app/UI/NG_COOL_BED_UI/qml/api/: Ajax.qml  Api.qml  ServerUrl.qml  Tool.qml  qmldir
app/UI/NG_COOL_BED_UI/qml/base/: ActionButton.qml
app/UI/NG_COOL_BED_UI/qml/core/: CalibrationViewCore.qml  CameraViewCore.qml  Core.qml  qmldir
app/UI/NG_COOL_BED_UI/qml/dialogs/: AlgTestDialog.qml  Db6Dialog.qml  GeneralSettingsPage.qml  IpSettingDialog.qml  SendDialog.qml  SettingView.qml  TestingSettingsPage.qml  TextViewItem.qml
app/UI/NG_COOL_BED_UI/qml/head/: HeadView.qml  TestBtns.qml
app/UI/NG_COOL_BED_UI/qml/menus/: MainMenu.qml  ToolMenus.qml
app/UI/NG_COOL_BED_UI/qml/setting/: SettingView.qml
app/UI/NG_COOL_BED_UI/qml/types/: CoolBedDataTypeItem.qml  CoolBedModelType.qml
app/UI/NG_COOL_BED_UI/qml/view/: CoolBedView.qml  MainViewLayout.qml  MainViewLayout.qml.autosave
app/UI/NG_COOL_BED_UI/qml/view/calibration_view/: CalibrationView.qml
app/UI/NG_COOL_BED_UI/qml/view/calibration_view/components/: EditableRect.qml
app/UI/NG_COOL_BED_UI/qml/view/calibration_view/dialogs/: CreateFolderDialog.qml  DeleteDialog.qml
app/UI/NG_COOL_BED_UI/qml/view/calibration_view/left/: FolderToolbar.qml  GroupListItem.qml  GroupListPanel.qml  LeftPanel.qml  LineGroupItem.qml
app/UI/NG_COOL_BED_UI/qml/view/calibration_view/right/: CameraImagePanel.qml  CameraPanel.qml  CameraToolbar.qml  MappingObjectEditDialog.qml  MappingObjectItem.qml  MappingObjectPanel.qml  ObjectManagerPanel.qml  PerspectivePreview.qml  RightPanel.qml
app/UI/NG_COOL_BED_UI/qml/view/calibration_view/right/camera_panel/: CameraImagePanel.qml  (+3 more)
app/UI/NG_COOL_BED_UI/qml/view/camera_view/: CameraImageView.qml  CameraTile.qml  CameraViewCore.qml  CameraViw.qml  GropListView.qml  GropListViewItem.qml  GropView.qml  IpTreeView.qml
app/UI/NG_COOL_BED_UI/qml/view/camera_view/camera/: CameraImageView.qml  CameraTile.qml  CameraVideoView.qml  CameraViewLayout.qml  PerspectiveOverlay.qml
app/UI/NG_COOL_BED_UI/qml/view/camera_view/grop/: GropView.qml  GropViewLayout.qml
app/UI/NG_COOL_BED_UI/qml/view/camera_view/left/: GropListView.qml  GropListViewItem.qml  IpTreeView.qml  LeftManageView.qml
app/UI/NG_COOL_BED_UI/qml/view/core/: MapConfigItem.qml  ObjectType.qml
app/UI/NG_COOL_BED_UI/qml/view/data/: DataLabelItem.qml  DataView.qml
app/UI/NG_COOL_BED_UI/qml/view/head/: AutoCheckDelegate.qml  GroupButton.qml
app/UI/NG_COOL_BED_UI/qml/view/view/: HasRec.qml  ImageView.qml  MapView.qml  MoveView.qml  ObjView.qml  ObjectItem.qml
app/UI/NG_COOL_BED_UI/qml/view/view_core/: ControlConfig.qml  CoolBedCore.qml  Db6DataCore.qml  MapConfigItem.qml  SendDataCore.qml  TimeCore.qml
(+684 files in other folders)
